# workflow-linter

./: Cargo.toml  LICENSE  README.md
src/: custom_types.rs  main.rs  workflow.rs
