[package]
name = "workflow-linter"
version = "0.1.0"
authors = ["Andrew Thorp <andrew.thorp.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde = { version = "1.0.118", features = ["derive"] }
serde_yaml = "0.8.14"
void = "1.0.2"
